--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e coffee,js,ejs,html,css app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,6 @@
     "nodemon": "^2.0.13"
   },
   "engines": {
-    "node": "10.x"
+    "node": "x.x"
   }
 }
